PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_5-109_produit_invalide2/gcc-compile.txt
input.c:3:14: error: expected expression
    return 2*;
             ^
1 error generated.

return code: 1
